@@ -1,3 +1,8 @@
+Tue Dec 10 21:47:56 EET 2002  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed double free in invite list adding code when adding
+	  invite strings.  Affected file silcd/server_util.c.
+
 Fri Dec  6 17:40:24 EET 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* More log printing during backup router protocol.  Affected
